--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "bcrypt": "^6.0.0",
     "express": "^5.1.0",
+    "openai": "^5.11.0",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
