--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/jeremywuworldwidesimtan/studysync-api#readme",
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "openai": "^5.11.0",
     "sqlite3": "^5.1.7"
